fixed layout spacing

--- a/src/css/Layout.less
+++ b/src/css/Layout.less
@@ -7,7 +7,7 @@
     position: absolute; 
     display: block;
     overflow: scroll;
-    border: 0;
+//    border: 0;
 }
 
 .hs-layout-spacing {
@@ -23,6 +23,9 @@
         &:first-of-type { border-top: 0; }  
         &:last-of-type { border-bottom: 0; }  
     } 
+    .hs-tile-layout > .hs-layout {
+        border: @LayoutSpacing; 
+    }
 }
 
 .hs-row-layout {
