--- a/src/example/hsLayout.less
+++ b/src/example/hsLayout.less
@@ -2,6 +2,7 @@
 
 @space: 2px;
 @border: 1px;
+@LayoutSpacing: @border solid white;
 
 body {
     font-family: sans-serif;
@@ -18,6 +19,8 @@ body {
     font-family: Arial;
     font-size: 10px;
     overflow:visible;
+    .hs-layout-spacing;
+/*    
     &.hs-column-layout {
         margin-top: @space;
         margin-bottom: @space+2*@border;
@@ -30,11 +33,12 @@ body {
         &:first-child { margin-left: 2*@space; }
         &:last-child { margin-right: 2*@space+2*@border; }
     }
+*/    
 }
 
 .leaf .hs-layout {
     text-align: center;
-    border: @border solid #aaa;
+//    border: @border solid #aaa;
     .hs-column-layout& {
         background-color: #ffe;
     }
